--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rebuild": "electron-rebuild -f -w sqlite3"
   },
   "dependencies": {
+    "diacritic": "0.0.2",
     "exceljs": "^0.4.10",
     "extract-zip": "^1.6.5",
     "fs-jetpack": "^1.0.0",
