--- a/package.json
+++ b/package.json
@@ -32,32 +32,32 @@
   },
   "dependencies": {
     "diacritic": "0.0.2",
-    "exceljs": "^0.4.10",
-    "extract-zip": "^1.6.5",
-    "fs-jetpack": "^1.0.0",
-    "glob": "^7.1.2",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "sqlite3": "^3.1.8"
+    "exceljs": "0.4.10",
+    "extract-zip": "1.6.5",
+    "fs-jetpack": "1.0.0",
+    "glob": "7.1.2",
+    "lodash": "4.17.4",
+    "moment": "2.18.1",
+    "sqlite3": "3.1.8"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "electron": "^1.6.8",
-    "electron-builder": "^17.1.1",
-    "electron-mocha": "^3.3.0",
-    "electron-rebuild": "^1.5.11",
-    "gulp": "^3.9.1",
-    "gulp-batch": "^1.0.5",
-    "gulp-less": "^3.3.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11",
-    "istanbul": "^0.4.5",
-    "minimist": "^1.2.0",
-    "mocha": "^3.2.0",
-    "rollup": "^0.41.4",
-    "rollup-plugin-istanbul": "^1.1.0",
-    "source-map-support": "^0.4.11",
-    "spectron": "^3.6.0"
+    "chai": "3.5.0",
+    "electron": "1.6.8",
+    "electron-builder": "17.1.1",
+    "electron-mocha": "3.3.0",
+    "electron-rebuild": "1.5.11",
+    "gulp": "3.9.1",
+    "gulp-batch": "1.0.5",
+    "gulp-less": "3.3.0",
+    "gulp-plumber": "1.1.0",
+    "gulp-util": "3.0.8",
+    "gulp-watch": "4.3.11",
+    "istanbul": "0.4.5",
+    "minimist": "1.2.0",
+    "mocha": "3.2.0",
+    "rollup": "0.41.4",
+    "rollup-plugin-istanbul": "1.1.0",
+    "source-map-support": "0.4.11",
+    "spectron": "3.6.0"
   }
 }
