--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "glob": "7.1.2",
     "lodash": "4.17.4",
     "moment": "2.18.1",
-    "sqlite3": "3.1.8"
+    "sqlite3": "3.1.8",
+    "string.prototype.padstart": "3.0.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
